# itau-basetool

./: .dockerignore  .gitignore  Dockerfile  README.md  THIRD_PARTY_NOTICES.md  basetool.py  config.json  crypto.py  docker-compose.yml  megatool.py  proxy.json  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  nightly.yml  proxy-workability.yml  release.yml  upstream-drift.yml
docs/: CONTAINER_WORKABILITY_TESTING.md  architecture.md  engine-boundary.md  testing.md
docs/sprints/: 2026-05-24-mhddos-upstream-integration.md
modules/basetool/: UPSTREAM.json  redaction.py
scripts/: check_proxy_workability.py  container-smoke.sh  sync-mhddos-upstream.py
scripts/dev/: generate-upstream-patches.py
scripts/release/: archive_utils.py  build-release-artifact.py  simulate-downstream-stage.py  verify-release-artifact.py
scripts/smoke/: process_driver.py  quiet_http.py  runner-methods-smoke.py  runner-regression-smoke.py  runner-stability-smoke.py
tests/: conftest.py
tests/fixtures/: basetool-help.txt  json-telemetry.schema.json  minimal-config.json  regression-snapshot-pre.txt  release-tarball-manifest.txt
tests/integration/: helpers.py  test_concurrent_runners.py  test_config_matrix.py  test_unreachable_targets.py
tests/orchestration/: test_scripts_cli.py
tests/patches/: test_import_side_effects.py  test_patches_apply.py
tests/release/: test_cli_surface.py  test_json_schema.py  test_tarball_layout.py
tests/unit/: test_adapter.py  test_config.py  test_json_telemetry.py  test_manager.py  test_monitor.py  test_proxy_manager.py  (+2 more)
(+15 files in other folders)
